# euc

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: teapot.rs
examples/: spinning_cube.rs  teapot.rs  texture_mapping.rs  triangle.rs  wireframes.rs
src/: buffer.rs  index.rs  interpolate.rs  lib.rs  math.rs  pipeline.rs  primitives.rs  texture.rs
src/buffer/: mod.rs
src/rasterizer/: lines.rs  mod.rs  triangles.rs
src/sampler/: linear.rs  mod.rs  nearest.rs
