[package]
name = "euc"
version = "0.5.2"
description = "A software rendering crate that lets you write shaders with Rust"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Martin Sandfuchs <martin@cluginbuehl.ch>"]
license = "Apache-2.0 AND MIT"
repository = "https://github.com/zesterer/euc"
readme = "README.md"
edition = "2018"
keywords = ["renderer", "3D", "graphics", "raster"]
exclude = [
	"/misc",
	"/misc/*",
]

[dependencies]
vek = { version = "0.12", default-features = false, features = [] }
image_ = { package = "image", version = "0.23", optional = true }
num_cpus = { version = "1.13", optional = true }
crossbeam-utils = { version = "0.8", optional = true }
fxhash = { version = "0.2", optional = true }

[features]
default = ["std", "image", "par"]
std = ["vek/std"]
libm = ["vek/libm"]
nightly = []
simd = ["vek/repr_simd"]
image = ["image_"]
par = ["std", "num_cpus", "crossbeam-utils", "fxhash"]

[dev-dependencies]
mini_gl_fb = { git = "https://github.com/shivshank/mini_gl_fb", rev = "02b3b62520e5ee1990fd004348b89d12e294dc47" }
wavefront = "0.1.3"
criterion = "0.3.3"
image_ = { package = "image", version = "0.23" }
vek = "0.12.1"
derive_more = "0.99"

[lib]
bench = false

[[bench]]
name = "teapot"
harness = false

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
