[package]
name = "euc"
version = "0.5.2"
description = "A software rendering crate that lets you write shaders with Rust"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>", "Martin Sandfuchs <martin@cluginbuehl.ch>"]
license = "Apache-2.0 AND MIT"
repository = "https://github.com/zesterer/euc"
readme = "README.md"
edition = "2018"
keywords = ["renderer", "3D", "graphics", "raster"]
exclude = [
	"/misc",
	"/misc/*",
]

[dependencies]
vek = { version = "0.15", default-features = false, features = [] }
image_ = { package = "image", version = "0.24", optional = true }
num_cpus = { version = "1.13", optional = true }
fxhash = { version = "0.2", optional = true }
micromath_ = { package = "micromath", version = "1.1", optional = true }
clipline = { version = "0.1.0" }

[features]
default = ["std", "image", "par"]
std = ["vek/std"]
libm = ["vek/libm"]
nightly = []
simd = ["vek/repr_simd", "vek/platform_intrinsics"]
image = ["image_"]
par = ["std", "num_cpus", "fxhash"]
micromath = ["micromath_"]

[dev-dependencies]
minifb = "0.20"
wavefront = "0.2"
criterion = "0.3.3"
image_ = { package = "image", version = "0.23" }
vek = "0.15"
derive_more = "0.99"

[lib]
bench = false

[[bench]]
name = "teapot"
harness = false

[profile.dev]
# Optimize by default so we don't need to remember to always pass in --release
opt-level = 3
overflow-checks = false
